<resources>
    <string name="app_name">Herby Mazowsza Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Liczba możliwości</string>
    <string name="default_region">Wolominski</string>
    <string name="default_region_message">Musisz wybrac przynajmniej jeden powiat. Jako domyślny powiat wybrano Powiat Wołomiński</string>
    <string name="guess_place">Jaka to gmina?</string>
    <string name="image_description">Obraz bieżącego godła</string>
    <string name="incorrect_answer">Błąd!</string>
    <string name="number_of_choices_description">Wyświetla 2, 4, 6 lub 8 możliwości</string>
    <string name="question">Pytanie %1$d z %2$d</string>
    <string name="reset_quiz">Resetuj quiz</string>
    <string name="restarting_quiz">Quiz zostanie uruchomiony ponownie z nowymi ustawieniami</string>
    <string name="results">%1$d odpowiedzi %2$.02f%% poprawnych</string>
    <string name="regions">Powiaty</string>
    <string name="regions_description">Powiaty, których ma dotyczyć quiz</string>
    <string name="title_activity_settings">Ustawienia</string>

</resources>
