<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_number_of_choices"
        android:title="@string/number_of_choices"
        android:summary="@string/number_of_choices_description"
        android:persistent="true"
        android:defaultValue="4"
        />


    <MultiSelectListPreference
        android:entries="@array/guesses_list"
        android:entryValues="@array/guesses_list"
        android:key="pref_RegionsToInclude"
        android:title="@string/regions"
        android:summary="@string/regions_description"
        android:persistent="true"
        android:defaultValue="@array/regions_list"
        />
</PreferenceScreen>