<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.curlycode.herbymazowszaquiz.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/flagImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:id="@+id/row1linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/row4linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Material.Button.Colored"
            android:text="Button" />
    </LinearLayout>


    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="clip_horizontal"
        android:layout_marginBottom="@dimen/spacing"
        android:text="@string/question"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />


    <TextView
        android:id="@+id/guessPlaceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/guess_place"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:gravity="center_horizontal"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="@dimen/answer_size"
        android:textStyle="bold" />


</LinearLayout>